# roxy

./: .gitignore  Cargo.toml  build.rs  devenv.nix  rust-toolchain.toml
os/roxy_kernel/: Cargo.toml
os/roxy_kernel/src/: framebuffer.rs  gdt.rs  heap.rs  idt.rs  lib.rs  logger.rs  main.rs
os/roxy_kernel/src/boot/: gdt.rs  idt.rs  mod.rs
os/roxy_kernel/src/boot/memory/: boot_info_frame_allocator.rs  mod.rs
os/roxy_kernel/src/vmm/: memory_map.rs  mod.rs
src/: main.rs
