[workspace]
members = [
    "os/roxy_kernel"
]

[package]
name = "roxy"
version = "0.1.0"
edition = "2021"

[build-dependencies]
roxy_kernel = { path = "os/roxy_kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.7"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
ovmf-prebuilt = "0.1.0-alpha.1"
