cargo-features = ["profile-rustflags"]

[workspace]
members = [
    "os/roxy_kernel"
]

[package]
name = "roxy"
version = "0.1.0"
edition = "2021"

[build-dependencies]
roxy_kernel = { path = "os/roxy_kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.7"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
ovmf-prebuilt = "0.1.0-alpha.1"

[profile.release.package.roxy_kernel]
rustflags = [
    "-C",
    "linker=ld.lld",
    "-C",
    "link-args=--image-base 0xFFFF800000000000",
    "-C",
    "link-args=--gc-sections",
    "-C",
    "code-model=large",
    "-C",
    "relocation-model=static",
]

[profile.test.package.roxy_kernel]
rustflags = []

[profile.dev.package.roxy_kernel]
rustflags = [
    "-C",
    "linker=ld.lld",
    "-C",
    "link-args=--image-base 0xFFFF800000000000",
    "-C",
    "link-args=--gc-sections",
    "-C",
    "code-model=large",
    "-C",
    "relocation-model=static",
]